<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="c4_help"></string>
	<string name="comet">Comet On</string>
	<string name="ok">OK</string>
	<string name="error_invite">Invite failed</string>
	<string name="invitation">Invitation</string>
	<string name="join_confirm">You have got invitation to join the game: </string>
	<string name="invite_player">Invite</string>
	<string name="connect">Connect</string>
	<string name="back_invite">Back</string>
	<string name="resign">Resign</string>
	<string name="resign_confirmation">Are you sure to resign this game?</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="back">&lt;&lt;</string>
    <string name="forward">&gt;&gt;</string>
    <string name="game_started">Game started</string>
    <string name="start">Start game</string>
    <string name="cancel">Cancel</string>
	<string name="rated">Rated</string>
	<string name="unrated">Unrated</string>
	<string name="move_incr">Move increment (sec)</string>
    <string name="observer">Observer </string>
    <string name="main">Mages</string>
    <string name="chess">Chess</string>
    <string name="end_of_game">Game ended</string>
    <string name="no_games">No Mages games are installed at this device, please make sure that installed game contains
    activity with action mages.intent.action.GAME</string>
    <string name="welcome">Welcome to Mages - Multiplayer Android Game Engine. Please choose one from installed Mages Games.</string>
    <string name="welcome_game">Please choose game server supported by this device</string>
    <string name="welcome_lobby">Please choose one from game sessions</string>
    <string name="empty_lobby">There are no existing game sessions at this server, you may create new one to play</string>
    <string name="connect4">Connect Four</string>
    <string name="gasp_server">GASP Game Server</string>
    <string name="gasp_server_label">GASP Game Server and application ID</string>
    <string name="gasp_configure">GASP Server configuration</string>
    <string name="local_configure">Local Server configuration</string>
    <string name="local_server">Local Game Server</string>
    <string name="gasp_instruction">Enter connection settings below. If you are new user, just enter desired username/password</string>
    <string name="local_instruction">Enter desired username</string>
    <string name="password_text"></string>
    <string name="username_text"></string>
    <string name="server">GASP Server Url</string>
    <string name="appId">Application Id</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="lobby">Lobby</string>
    <string name="in_game">In Game</string>
    <string name="login_is_not_valid">Username/password is not valid</string>
    <string name="gasp_service_started">GASP Service started</string>
    <string name="gasp_service_stopped">GASP Service stopped</string>
    <string name="gasp_service_connected">GASP Service connected</string>
    <string name="gasp_service_disconnected">GASP Service disconnected</string>
    <string name="board_service_connected">Board Game Service connected</string>
    <string name="board_service_disconnected">Board Game Service disconnected</string>
    <string name="gasp_service_label">GASP Service</string>
    <string name="create_own_session">Create your own game session</string>
    <string name="logging">Connection to the server...</string>
    <string name="session_retrieving">Retrieving game session list..</string>
    <string name="session_create">Creation of new game session..</string>
    <string name="session_created">Game session have been created</string>
    <string name="session_joined">Game session have been joined</string>
    <string name="session_create_error">Network error - session cannot be created</string>
    <string name="error_first_login_failed">Login failed</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_network_error">Network error</string>
    <string name="error_unknown">Application error</string>
    <string name="error_unsupported">Operation is not supported</string>
    <string name="error_create">Error during game creation</string>
    <string name="error_join">Error during game join</string>
    <string name="error_list">Error during game list retrieving</string>
    <string name="error_send">Error during sending data</string>
    <string name="error_receive">Error during receiving data</string>
    <string name="error_incorrect_move">Incorrect move</string>
    
    <string name="request_timeout">Timeout</string>
    <string name="join_game">Join game session</string>
    <string name="quit_game">Quit lobby</string>
    <string name="header_number">N</string>
    <string name="header_white">White</string>
    <string name="header_black">Black</string>
    <string name="header_settings">Settings</string>
    <string name="joining_game">Joining Game session...</string>
    <string name="create_game">Create new game session</string>
    <string name="creating_game">Creating Game session..</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="quit">Quit</string>
    <string name="invitation_sent">Invitation have been sent</string>
    <string name="choose_player_to_invite">Choose player to invite</string>
    <string name="join_game_confirmation">Do you want to join this game session?</string>
    <string name="start_game_confirmation">Game start</string>
    <string name="enter_to_the_game">Do you want to start?</string>
    <string name="invite">Invite players</string>
    <string name="white_chess">White turn</string>
    <string name="black_chess">White turn</string>
    <string name="waiting">Waiting for the players</string>
    <string name="wait_game_start">Please wait for other players. To invite players click \'Invite\'</string>
    <string name="cancelled_action">User cancel</string>
    <string name="wait_game_session_received">Wait game session received</string>
    <string name="exception">Exception</string>
    <string name="session_is_not_received">Session is not received</string>
    <string name="game_parameters">Game settings</string>
    <string name="time_per_move">Move limit (min)</string>
    <string name="time_per_game">Game limit (min)</string>
    <string name="player">Color:</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="change">Change</string>
    <string name="join">JOIN</string>
    <string name="infinite">No time limit</string>
    <string name="set_time_per_move">Set the time per move</string>
    <string name="set_time_per_game">Set the time per game</string>
    <string name="cannot_create_game">Cannot create game</string>
    <string name="cannot_retrieve_list">Error during game list loading</string>
    <string name="operation_is_not_supported">Operation is not supported by this game server</string>
    <string name="cannot_join_game">Cannot join game</string>
    <string name="android_chess_repeater">Chess android-repeater</string>
    <string name="you_got_the_message">You got the message</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You lose!</string>
    <string name="you_tie">You tie!</string>
    <string name="game_settings_received">Game settings received</string>
    <string name="error">Error</string>
    <string name="sending_move">Sending move...</string>
    <string name="gamer">Player</string>
    <string name="quits_the_game">quits the game.</string>
    <string name="joins_the_game">joins the game.</string>
    <string name="game_title">Game</string>
    
    <string name="activity_alert_Dialog">App/Dialog</string>
    <string name="alert_Dialog_two_buttons">Yes No Dialog with a message</string>
    <string name="alert_Dialog_two_buttons2">Yes No Dialog with a long message</string>
    <string name="alert_Dialog_select_button">List Dialog</string>
    <string name="alert_Dialog_progress_button">Progress Dialog</string>
    <string name="alert_Dialog_two_buttons_msg">Lorem ipsum dolor sit amet</string>
    <string name="alert_Dialog_two_buttons2_msg">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit?
        Qwert is a lorem dolor sit amet alpha bravo charlie sum?
    </string>
    <string name="alert_Dialog_ok">OK</string>
    <string name="alert_Dialog_yes">Yes</string>
    <string name="alert_Dialog_no">No</string>
    <string name="alert_Dialog_hide">Hide</string>
    <string name="alert_Dialog_cancel">Cancel</string>
    <string name="alert_Dialog_progress_text1">34%</string>
    <string name="alert_Dialog_progress_text2">145/305 KB</string>
    
    
</resources>
