<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<RelativeLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:id="@+id/layout_bottom">

		<Button android:id="@+id/save" android:text="@string/connect"
			android:layout_alignParentRight="true"
			android:layout_width="150dip"
			android:layout_height="wrap_content" android:layout_marginLeft="10dip"/>
			
		<Button android:id="@+id/clear" android:text="@string/back_invite"
			android:layout_alignParentLeft="true"
			android:layout_width="150dip"
			android:layout_height="wrap_content" android:layout_marginRight="10dip"/>

	</RelativeLayout>
	
	<LinearLayout android:orientation="vertical"
		android:layout_alignParentTop="true"
		android:layout_above="@id/layout_bottom"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	
	
	<TextView android:text="@string/local_instruction"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<TextView android:text="@string/user"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="2dip" />

	<EditText android:id="@+id/username" 
		android:text="@string/username_text" android:padding="2dip"
		android:layout_width="fill_parent" android:singleLine="true"
		android:layout_height="wrap_content" />

	</LinearLayout>
</RelativeLayout>
